--- a/templates/index.html
+++ b/templates/index.html
@@ -5,26 +5,28 @@
     var source = new EventSource('/stream')
 
     source.addEventListener('message', function(e) {
-      document.getElementById('data').innerHTML = e.data
+      console.log(e);
+      console.log(e.data);
+      document.getElementById('data').innerHTML = e.data;
     }, false)
 
     source.addEventListener('open', function(e) {
-      document.getElementById('state').innerHTML = "Connected"
+      document.getElementById('state').innerHTML = "Connected";
     }, false)
 
     source.addEventListener('error', function(e) {
       const id_state = document.getElementById('state')
       if (e.eventPhase == EventSource.CLOSED)
-        source.close()
+        source.close();
       if (e.target.readyState == EventSource.CLOSED) {
-        id_state.innerHTML = "Disconnected"
+        id_state.innerHTML = "Disconnected";
       }
       else if (e.target.readyState == EventSource.CONNECTING) {
-        id_state.innerHTML = "Connecting..."
+        id_state.innerHTML = "Connecting...";
       }
     }, false)
   } else {
-    console.log("Your browser doesn't support SSE")
+    console.log("Your browser doesn't support SSE");
   }
   </script>
 </head>
