--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
       }
     }
     </script>
-   <script type="text/javascript" src="canvasjs.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='canvasjs.min.js') }}"></script>
 </head>
 <body>
   <h1>SSE: <span id="state"></span></h1>
