--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,11 @@
       if (!!window.EventSource) {
         var source = new EventSource('/stream')
 
-        source.addEventListener('message', function(e) {
+        source.addEventListener('SPEED_UNKNOWN', function(e) {
+          document.getElementById('status').innerHTML = "Speed Unknown";
+        }, false)
+
+        source.addEventListener('SPEED', function(e) {
           var data = JSON.parse(e.data);
           dps.push({
             x: new Date(data.x),
@@ -57,8 +61,7 @@
             source.close();
           if (e.target.readyState == EventSource.CLOSED) {
             id_state.innerHTML = "Disconnected";
-          }
-          else if (e.target.readyState == EventSource.CONNECTING) {
+          } else if (e.target.readyState == EventSource.CONNECTING) {
             id_state.innerHTML = "Connecting...";
           }
         }, false)
@@ -70,8 +73,8 @@
     <script type="text/javascript" src="{{ url_for('static', filename='canvasjs.min.js') }}"></script>
 </head>
 <body>
-  <h1>SSE: <span id="state"></span></h1>
-  <!--<h3>Data: <span id="data"></span></h3>--> 
+  <h3>SSE: <span id="state"></span></h3>
+  <h3>Status: <span id="status"></span></h3>
   <div id="chartContainer" style="height: 300px; width: 100%;"></div>
 </body>
 </html>
